--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                         <input type="email" placeholder="Entrez votre adresse e-mail pour être tenu informé de nos activités">
                         <input type="submit">
                     </form>
+                    <p>⚠️ La newsletter n'est pour le moment pas disponible !</p>
                 </section>
             </section>
             <div class="sectionHR"></div>
